Cleaned up form/editor initialization.
git-svn-id: https://svn.surgeworks.com/svn/extjs/trunk@152 1b761127-1ad0-4876-81ae-be529af7a005

--- a/tests/mvc_crud_controller.html
+++ b/tests/mvc_crud_controller.html
@@ -22,13 +22,13 @@ function testInitForm() {
   var form = new Ext.form.BasicForm();
 
   // should index the fields
-  controller.initForm(form);
-  assert(form.items.maps['dataIndex'] == form.fields);
+  controller.initFormIdempotent(form);
+  assert('assigned map', form.items.maps['dataIndex'] == form.fields);
 
   // should not re-init the form
   var firstIndex = form.fields;
-  controller.initForm(form);
-  assert(form.fields == firstIndex);
+  controller.initFormIdempotent(form);
+  assert('doesnt rebuild index', form.fields == firstIndex);
 
   assertEventRelay(form, controller, 'beforeaction');
   assertEventRelay(form, controller, 'actionfailed');
