Fixed SearchStore bug where the query filters were added over and over again when searching. Also fixed SearchStore constructor and added tests for changes.
git-svn-id: https://svn.surgeworks.com/svn/extjs/trunk@164 1b761127-1ad0-4876-81ae-be529af7a005

--- a/tests/data_stores.html
+++ b/tests/data_stores.html
@@ -16,30 +16,52 @@
 
 function testCrudStoreConstructor() {
   var origMgr = Ext.StoreMgr;
-  var origStore = {
-    initialConfig: {
-      existing: true,
-      newValue: false     
+
+  function test(Type) {
+    var origStore = {
+      initialConfig: {
+        existing: true,
+        newValue: false     
+      }
     }
+
+    Ext.StoreMgr = {
+      get: function() {
+        return origStore;
+      }
+    }
+
+    var store = new Type('existing', {
+      newValue: true
+    });
+
+    assertTrue('copy existing config', store.existing);
+    assertTrue('override with new config', store.newValue);
+    assertFalse('preserve original config', origStore.initialConfig.newValue);
+    assertEquals('clean initialConfig', 'undefined', typeof store.initialConfig.proxy);
+    assertEquals('clean initialConfig', 'undefined', typeof store.initialConfig.reader);
   }
 
-  Ext.StoreMgr = {
-    get: function() {
-      return origStore;
-    }
-  }
-
-  var store = new SWorks.CrudStore('existing', {
-    newValue: true
-  });
-
-  assertTrue('copy existing config', store.existing);
-  assertTrue('override with new config', store.newValue);
-  assertFalse('preserve original config', origStore.initialConfig.newValue);
-  assertEquals('clean initialConfig', 'undefined', typeof store.initialConfig.proxy);
-  assertEquals('clean initialConfig', 'undefined', typeof store.initialConfig.reader);
+  test(SWorks.CrudStore);
+  test(SWorks.SearchStore);
 
   Ext.StoreMgr = origMgr;
+}
+
+function testSearchStoreLoad() {
+  // The query parameter is already provided, don't add it again
+  var text, store = new SWorks.SearchStore({ url: '/test' });
+  store.proxy.load = function(p) {
+    assertEquals(text, p.q);
+  };
+
+  text = 'test';
+  store.addFilter('test', 'filter');
+  store.load({ params: { q: text }});
+  store.reload();
+
+  text = 'filter';
+  store.load();
 }
 
 </script></body></html>
