Added jsunit for testing

--- a/tests/test_suite.html
+++ b/tests/test_suite.html
@@ -1,6 +1,6 @@
 <html><head>
 
-<script type="text/javascript" src="../../jsunit/app/jsUnitCore.js"></script>
+<script type="text/javascript" src="../external/jsunit/app/jsUnitCore.js"></script>
 
 </head><body><script type="text/javascript">
 
