--- a/tests/mvc_toolbar_builder.html
+++ b/tests/mvc_toolbar_builder.html
@@ -4,7 +4,7 @@
 
 <script type="text/javascript" src="../../ext/adapter/ext/ext-base.js"></script>
 <script type="text/javascript" src="../../ext/ext-all-debug.js"></script>
-<script type="text/javascript" src="../../jsunit/app/jsUnitCore.js"></script>
+<script type="text/javascript" src="../external/jsunit/app/jsUnitCore.js"></script>
 <script type="text/javascript" src="jsmock.js"></script>
 <script type="text/javascript" src="helpers.js"></script>
 
