Fixed bug in SearchStore return value of load()

--- a/tests/data_stores/suite.html
+++ b/tests/data_stores/suite.html
@@ -10,11 +10,8 @@ function suite() {
     // These urls are relative to the testRunner.html file, so you need
     // to use the testRunner.html file from the same location as the
     // jsUnitCore.js file above.
-    newsuite.addTestPage("../framework/tests/data_stores/suite.html");
-    newsuite.addTestPage("../framework/tests/mvc_toolbar_builder.html");
-    newsuite.addTestPage("../framework/tests/mvc_data_model.html");
-    newsuite.addTestPage("../framework/tests/mvc_crud_controller.html");
-    newsuite.addTestPage("../framework/tests/mvc_dialog_editor.html");
+    newsuite.addTestPage("../../tests/crud_store.html");
+    newsuite.addTestPage("../../tests/search_store.html");
 
     return newsuite;
 }
