--- a/tests/data_stores/crud_store.html
+++ b/tests/data_stores/crud_store.html
@@ -2,15 +2,15 @@
 
 <html><head>
     
-<script type="text/javascript" src="../../ext/adapter/ext/ext-base.js"></script>
-<script type="text/javascript" src="../../ext/ext-all-debug.js"></script>
-<script type="text/javascript" src="../external/jsunit/app/jsUnitCore.js"></script>
-<script type="text/javascript" src="jsmock.js"></script>
-<script type="text/javascript" src="helpers.js"></script>
+<script type="text/javascript" src="../../../ext/adapter/ext/ext-base.js"></script>
+<script type="text/javascript" src="../../../ext/ext-all-debug.js"></script>
+<script type="text/javascript" src="../../external/jsunit/app/jsUnitCore.js"></script>
+<script type="text/javascript" src="../jsmock.js"></script>
+<script type="text/javascript" src="../helpers.js"></script>
 
 <!-- End Standard Code -->
 
-<script type="text/javascript" src="../data_stores.js"></script>
+<script type="text/javascript" src="../../data_stores.js"></script>
 
 </head><body><script type="text/javascript">
 
