Moved to ErrorHandling with automatic retrys. Fixed tests.

--- a/tests/data_stores/suite.html
+++ b/tests/data_stores/suite.html
@@ -1,6 +1,6 @@
 <html><head>
 
-<script type="text/javascript" src="../external/jsunit/app/jsUnitCore.js"></script>
+<script type="text/javascript" src="../../external/jsunit/app/jsUnitCore.js"></script>
 
 </head><body><script type="text/javascript">
 
@@ -10,8 +10,8 @@ function suite() {
     // These urls are relative to the testRunner.html file, so you need
     // to use the testRunner.html file from the same location as the
     // jsUnitCore.js file above.
-    newsuite.addTestPage("../../tests/crud_store.html");
-    newsuite.addTestPage("../../tests/search_store.html");
+    newsuite.addTestPage("../../tests/data_stores/crud_store.html");
+    newsuite.addTestPage("../../tests/data_stores/search_store.html");
 
     return newsuite;
 }
