--- a/tests/data_stores/crud_store.html
+++ b/tests/data_stores/crud_store.html
@@ -83,4 +83,18 @@ function testWhenLoaded() {
   mc.verify();
 }
 
+function testGetKlass() {
+  var mc = new MockControl();
+  var store = new Ext.data.Store({
+    klass: 'bob',
+    reader: new Ext.data.JsonReader({},
+                [ 'id', 'klass', 'text', 'estimated', 'quicktip' ])
+  });
+
+  var record = new store.recordType({});
+  assertUndefined('getKlass un-init', record.getKlass());
+  record.join(store);
+  assertEquals('getKlass inited', store.klass, record.getKlass());
+}
+
 </script></body></html>
