Added setAttributes to Ext.data.Record

--- a/tests/data_stores/suite.html
+++ b/tests/data_stores/suite.html
@@ -10,6 +10,7 @@ function suite() {
     // These urls are relative to the testRunner.html file, so you need
     // to use the testRunner.html file from the same location as the
     // jsUnitCore.js file above.
+    newsuite.addTestPage("../../tests/data_stores/record.html");
     newsuite.addTestPage("../../tests/data_stores/crud_store.html");
     newsuite.addTestPage("../../tests/data_stores/search_store.html");
 
